#24260 fix right sidebar in Edit Mode is not responsive

--- a/core-web/apps/dotcms-ui/src/app/view/components/dot-edit-layout-designer/dot-edit-layout-designer.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/view/components/dot-edit-layout-designer/dot-edit-layout-designer.component.scss
@@ -17,7 +17,6 @@ form {
     display: flex;
     flex-direction: column;
     height: 100%;
-    margin-right: 80px;
 }
 
 .dot-edit-layout__actions {
